[metadata]
name = apyengine
version = 1.0.0
description = A lightweight, embeddable Python interpreter
long_description = file: README.md
author = Mark Anacker
author_email = closecrowd@pm.me
url = https://github.com/closecrowd/apyengine/
license = MIT

[options]
packages = find:
install_requires =
    ast
    re
    importlib; python_version >= 3.5

[flake8]
max-line-length=120

